--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
+
+    //okrogla slika za avatar
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
