--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,24 @@
     package="emp.projektna.basketballTraining" >
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EmpProjektna" >
-        <activity android:name=".SecondMainActivity" >
+        <activity android:name=".SecondMainActivity" android:screenOrientation = "portrait" >
         </activity>
         <activity
+            android:screenOrientation = "portrait"
             android:name=".SignUpActivity"
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity" android:screenOrientation = "portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
