--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="emp.projektna.basketballTraining" >
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <application
+    package="emp.projektna.basketballTraining">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EmpProjektna" >
-        <activity android:name=".SecondMainActivity" android:screenOrientation = "portrait" >
-        </activity>
+        android:theme="@style/Theme.EmpProjektna">
+        <activity android:name=".SearchUser.SearchUserActivity"></activity>
+        <activity android:name=".EditProfile.EditProfileActivity" />
+        <activity android:name=".TrainigsActivity" />
         <activity
-            android:screenOrientation = "portrait"
+            android:name=".SecondMainActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".SignUpActivity"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".MainActivity" android:screenOrientation = "portrait" >
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
