redesign login in sign up strani

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,18 +19,10 @@
             android:windowSoftInputMode="adjustPan"
             android:name=".SecondMainActivity"
             android:screenOrientation="portrait" />
+
         <activity
             android:windowSoftInputMode="adjustPan"
-            android:name=".SignUpActivity"
-            android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
-        </activity>
-        <activity
-            android:windowSoftInputMode="adjustPan"
-            android:name=".MainActivity"
+            android:name=".LogIn_SignUp.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
