--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,20 +10,25 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
         android:theme="@style/Theme.EmpProjektna">
-        <activity android:name=".SearchUser.SearchUserActivity" android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".EditProfile.EditProfileActivity" android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".Trainings.TrainigsActivity" android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".CompletedTrainings.CompletedTrainingsActivity"></activity>
         <activity
-            android:windowSoftInputMode="adjustPan"
+            android:name=".SearchUser.SearchUserActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".EditProfile.EditProfileActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".Trainings.TrainigsActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name=".SecondMainActivity"
-            android:screenOrientation="portrait" />
-
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
         <activity
-            android:windowSoftInputMode="adjustPan"
             android:name=".LogIn_SignUp.MainActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
